# InnerDNN

./: .gitignore  CMakeLists.txt  README.md
include/innerDNN/: arg.h  bpe.h  gpu.h  loader.h  model_gpt.h  model_rwkv.h  shaders.h  trie.h  win.h
inference/: llama2.c  rwkv.c
res/: test_vocab.json
res/llama2/: vocab.json
res/rwkv/: rwkv_shape.txt  vocab.json
scripts/: rwkv_model_convert.py
src/: arg.c  bpe.c  gpu.c  loader.c  model_gpt.c  model_rwkv.c  shaders.c  shaders_def.h  shaders_def.inc  trie.c  win.c
tests/: bpe.c  rwkv_forward.c  shaders_load.c  trie.c
tools/: llama_vocab_decode.c
